See https://github.com/Qovery/qovery-openapi-spec/commit/feb0dc3d1e7d4a6da9e0242f8869bdd45a7b02d1 from refs/heads/main
